# pong-example

./: CMakeLists.txt  LICENSE.md  README.md  main.c
deploy/channel/code/: app.xml  cos.xml
deploy/channel/meta/: bootDrcTex.tga  bootLogoTex.tga  bootSound.btsnd  bootTvTex.tga  iconTex.tga  meta.xml
deploy/hbl/: meta.xml
src/: game.c  game.h  graphics.c  graphics.h  main.c
